// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`list changes considering parents > adds changes for dependency 1`] = `
{
  "changes": {
    "changes": undefined,
    "releases": {
      "all": {
        "dependencies": undefined,
        "manager": "javascript",
        "parents": {
          "yarn-workspace-base-pkg-a": {},
          "yarn-workspace-base-pkg-b": {},
        },
        "path": undefined,
        "pkg": "all",
        "type": "minor",
      },
      "yarn-workspace-base-pkg-a": {
        "changes": [
          {
            "meta": {
              "dependencies": [
                "all",
              ],
            },
            "releases": {},
            "summary": "",
          },
          {
            "meta": {
              "dependencies": [
                "all",
              ],
            },
            "releases": {},
            "summary": "",
          },
          {
            "meta": {
              "dependencies": [
                "yarn-workspace-base-pkg-b",
              ],
            },
            "releases": {},
            "summary": "",
          },
        ],
        "parents": {},
        "type": "patch",
      },
      "yarn-workspace-base-pkg-b": {
        "changes": [
          {
            "meta": {
              "dependencies": [
                "all",
              ],
            },
            "releases": {},
            "summary": "",
          },
          {
            "meta": {
              "dependencies": [
                "all",
              ],
            },
            "releases": {},
            "summary": "",
          },
        ],
        "parents": {
          "yarn-workspace-base-pkg-a": {},
        },
        "type": "patch",
      },
    },
  },
}
`;

exports[`list changes considering parents > bumps patch due to dependency bump 1`] = `
{
  "changes": {
    "changes": undefined,
    "releases": {
      "all": {
        "dependencies": undefined,
        "manager": "javascript",
        "parents": {
          "yarn-workspace-base-pkg-a": {},
          "yarn-workspace-base-pkg-b": {},
        },
        "path": undefined,
        "pkg": "all",
        "type": "minor",
      },
      "yarn-workspace-base-pkg-a": {
        "dependencies": undefined,
        "manager": "javascript",
        "parents": {},
        "path": undefined,
        "pkg": "all",
        "type": "patch",
      },
      "yarn-workspace-base-pkg-b": {
        "changes": [
          {
            "meta": {
              "dependencies": [
                "all",
              ],
            },
            "releases": {},
            "summary": "",
          },
          {
            "meta": {
              "dependencies": [
                "all",
              ],
            },
            "releases": {},
            "summary": "",
          },
        ],
        "parents": {
          "yarn-workspace-base-pkg-a": {},
        },
        "type": "patch",
      },
    },
  },
}
`;

exports[`list changes considering parents > rolls up the parent bumps 1`] = `
{
  "changes": {
    "changes": undefined,
    "releases": {
      "pkg-a": {
        "changes": [
          {
            "meta": {
              "dependencies": [
                "pkg-c",
              ],
            },
            "releases": {},
            "summary": "",
          },
          {
            "meta": {
              "dependencies": [
                "pkg-c",
              ],
            },
            "releases": {},
            "summary": "",
          },
          {
            "meta": {
              "dependencies": [
                "pkg-c",
              ],
            },
            "releases": {},
            "summary": "",
          },
          {
            "meta": {
              "dependencies": [
                "pkg-c",
              ],
            },
            "releases": {},
            "summary": "",
          },
        ],
        "parents": {
          "pkg-overall": {
            "pkg-a": [
              {
                "type": "dependencies",
                "version": "none",
              },
            ],
            "pkg-b": [
              {
                "type": "dependencies",
                "version": "none",
              },
            ],
          },
        },
        "type": "patch",
      },
      "pkg-b": {
        "changes": [
          {
            "meta": {},
            "releases": {
              "pkg-b": "minor",
            },
            "summary": "The pkg-b doesn't have a dep bump, but can dep bump pkg-a and pkg-overall with a patch.",
          },
        ],
        "parents": {
          "pkg-overall": {
            "pkg-a": [
              {
                "type": "dependencies",
                "version": "none",
              },
            ],
            "pkg-b": [
              {
                "type": "dependencies",
                "version": "none",
              },
            ],
          },
        },
        "type": "minor",
      },
      "pkg-c": {
        "changes": [
          {
            "meta": {},
            "releases": {
              "pkg-c": "patch",
              "pkg-d": "major",
            },
            "summary": "This should patch bump up the pkg-[number] line to where pkg-one also receives a bump. The pkg-c writes to a patch so we patch bump up that line too.",
          },
          {
            "meta": {
              "dependencies": [
                "pkg-d",
              ],
            },
            "releases": {},
            "summary": "",
          },
          {
            "meta": {
              "dependencies": [
                "pkg-d",
              ],
            },
            "releases": {},
            "summary": "",
          },
          {
            "meta": {
              "dependencies": [
                "pkg-d",
              ],
            },
            "releases": {},
            "summary": "",
          },
          {
            "meta": {
              "dependencies": [
                "pkg-d",
              ],
            },
            "releases": {},
            "summary": "",
          },
        ],
        "parents": {
          "pkg-a": {
            "pkg-c": [
              {
                "type": "dependencies",
                "version": "none",
              },
            ],
          },
        },
        "type": "patch",
      },
      "pkg-d": {
        "changes": [
          {
            "meta": {},
            "releases": {
              "pkg-c": "patch",
              "pkg-d": "major",
            },
            "summary": "This should patch bump up the pkg-[number] line to where pkg-one also receives a bump. The pkg-c writes to a patch so we patch bump up that line too.",
          },
        ],
        "parents": {
          "pkg-c": {
            "pkg-d": [
              {
                "type": "dependencies",
                "version": "none",
              },
            ],
          },
          "pkg-four": {
            "pkg-d": [
              {
                "type": "dependencies",
                "version": "none",
              },
            ],
          },
        },
        "type": "major",
      },
      "pkg-four": {
        "changes": [
          {
            "meta": {
              "dependencies": [
                "pkg-d",
              ],
            },
            "releases": {},
            "summary": "",
          },
          {
            "meta": {
              "dependencies": [
                "pkg-d",
              ],
            },
            "releases": {},
            "summary": "",
          },
          {
            "meta": {
              "dependencies": [
                "pkg-d",
              ],
            },
            "releases": {},
            "summary": "",
          },
          {
            "meta": {
              "dependencies": [
                "pkg-d",
              ],
            },
            "releases": {},
            "summary": "",
          },
        ],
        "parents": {
          "pkg-three": {
            "pkg-four": [
              {
                "type": "dependencies",
                "version": "none",
              },
            ],
          },
        },
        "type": "patch",
      },
      "pkg-one": {
        "changes": [
          {
            "meta": {
              "dependencies": [
                "pkg-two",
              ],
            },
            "releases": {},
            "summary": "",
          },
        ],
        "parents": {},
        "type": "patch",
      },
      "pkg-overall": {
        "changes": [
          {
            "meta": {
              "dependencies": [
                "pkg-b",
              ],
            },
            "releases": {},
            "summary": "",
          },
          {
            "meta": {
              "dependencies": [
                "pkg-b",
              ],
            },
            "releases": {},
            "summary": "",
          },
          {
            "meta": {
              "dependencies": [
                "pkg-a",
              ],
            },
            "releases": {},
            "summary": "",
          },
          {
            "meta": {
              "dependencies": [
                "pkg-b",
              ],
            },
            "releases": {},
            "summary": "",
          },
          {
            "meta": {
              "dependencies": [
                "pkg-a",
              ],
            },
            "releases": {},
            "summary": "",
          },
          {
            "meta": {
              "dependencies": [
                "pkg-b",
              ],
            },
            "releases": {},
            "summary": "",
          },
          {
            "meta": {
              "dependencies": [
                "pkg-a",
              ],
            },
            "releases": {},
            "summary": "",
          },
        ],
        "parents": {},
        "type": "patch",
      },
      "pkg-three": {
        "changes": [
          {
            "meta": {
              "dependencies": [
                "pkg-four",
              ],
            },
            "releases": {},
            "summary": "",
          },
          {
            "meta": {
              "dependencies": [
                "pkg-four",
              ],
            },
            "releases": {},
            "summary": "",
          },
          {
            "meta": {
              "dependencies": [
                "pkg-four",
              ],
            },
            "releases": {},
            "summary": "",
          },
        ],
        "parents": {
          "pkg-two": {
            "pkg-three": [
              {
                "type": "dependencies",
                "version": "none",
              },
            ],
          },
        },
        "type": "patch",
      },
      "pkg-two": {
        "changes": [
          {
            "meta": {
              "dependencies": [
                "pkg-three",
              ],
            },
            "releases": {},
            "summary": "",
          },
          {
            "meta": {
              "dependencies": [
                "pkg-three",
              ],
            },
            "releases": {},
            "summary": "",
          },
        ],
        "parents": {
          "pkg-one": {
            "pkg-two": [
              {
                "type": "dependencies",
                "version": "none",
              },
            ],
          },
        },
        "type": "patch",
      },
    },
  },
}
`;

exports[`list changes considering parents > skips roll up if range dep 1`] = `
{
  "changes": {
    "changes": undefined,
    "releases": {
      "pkg-a": {
        "changes": [
          {
            "meta": {},
            "releases": {
              "pkg-a": "patch",
            },
            "summary": "Roll up just a bit please.",
          },
        ],
        "parents": {
          "pkg-b": {
            "pkg-a": [
              {
                "type": "dependencies",
                "version": "1.0.0",
              },
            ],
          },
          "pkg-c": {
            "pkg-a": [
              {
                "type": "dependencies",
                "version": "^1.0.0",
              },
            ],
          },
        },
        "type": "patch",
      },
      "pkg-b": {
        "changes": [
          {
            "meta": {
              "dependencies": [
                "pkg-a",
              ],
            },
            "releases": {},
            "summary": "",
          },
        ],
        "parents": {},
        "type": "patch",
      },
    },
  },
}
`;
